Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/cfg.html
+++ b/cfg.html
@@ -30,12 +30,22 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_3__972013'>Session 3 - 9/7/2013</h3>
+
+<ul>
+<li><a href='/ruby1'>Ruby 1</a></li>
+
+<li><a href='/html3'>Web Fundamentals 3</a></li>
+
+<li><a href='/hmwk3'>Homework 3</a></li>
+</ul>
+
 <h3 id='session_2__472013'>Session 2 - 4/7/2013</h3>
 
 <ul>
 <li><a href='/html2'>Web Fundamentals 2</a></li>
 
-<li><a href='/hmwk2'>Homework</a></li>
+<li><a href='/hmwk2'>Homework 2</a></li>
 </ul>
 
 <h3 id='session_1__272013'>Session 1 - 2/7/2013</h3>
@@ -45,7 +55,7 @@
 
 <li><a href='/html1'>Web Fundamentals 1</a></li>
 
-<li><a href='/hmwk1'>Homework</a></li>
+<li><a href='/hmwk1'>Homework 1</a></li>
 </ul>
 
 
