--- a/hmwk3/index.html
+++ b/hmwk3/index.html
@@ -36,7 +36,11 @@
 <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#3_finish_ruby" data-toggle="tab">Finishing off </a></li>
+		<li class="active"><a href="#1_finishing_off" data-toggle="tab">Finishing off </a></li>
+		
+	
+		
+		<li><a href="#2_hate_mouse" data-toggle="tab">Hate your mouse </a></li>
 		
 	
 		
@@ -48,18 +52,49 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="3_finish_ruby">
+	<div class="tab-pane active" id="1_finishing_off">
 	
 
 		<h2>Finishing off</h2>
 		<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>Finish off the <code>html2/exercise2.html</code> css task from class.</p>
+<p>Finish the off the <code>html3/profile.html</code> exercise from class.</p>
 </div><hr /><div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
 <p>Finish off the <code>ruby1/advanced_hello.rb</code> and <code>ruby1/divide_cake.rb</code> exercises from class.</p>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="2_hate_mouse">
+	
+
+		<h2>Hate your mouse</h2>
+		<p>From now on, try to touch your mouse as little as often - it will make you quicker and more effective.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Practise using <code>Cmd-tab</code> (Mac) or <code>Ctrl-tab</code> (Windows) to move between programs.</p>
+</li>
+
+<li>
+<p>Practise using <code>Cmd-space</code> (Mac) or ?? (Windows) to open programs by typing their names.</p>
+</li>
+
+<li>
+<p>Practise using short cut keys:</p>
+
+<ul>
+<li><code>Cmd-s</code> (Mac) or <code>Ctrl-s</code> (Windows) for saving</li>
+
+<li><code>Cmd-r</code> (Mac) or <code>Ctrl-r</code> (Windows) to refresh the browser</li>
+</ul>
+</li>
+</ol>
 </div>
 	</div>
 
