--- a/ruby1/index.html
+++ b/ruby1/index.html
@@ -318,7 +318,13 @@ $ ruby hello.rb</code></pre>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>a = 1 b = 10 a = b Which of the following is correct?:</p>
+<p>Below is some code containing variables a and b</p>
+
+<pre><code> a = 1
+ b = 10
+ a = b</code></pre>
+
+<p>Which of the following is correct?:</p>
 
 <ol>
 <li>The value of a is 1. The value of b is 10.</li>
