--- a/html4/index.html
+++ b/html4/index.html
@@ -68,7 +68,7 @@
 <li>
 <p>Clone the project <a href=''>https://github.com/TomClose/first_site2</a>:</p>
 
-<pre><code> git clone git://github.com/TomClose/first_site2.git toms_site</code></pre>
+<pre><code> $ git clone git://github.com/TomClose/first_site2.git toms_site</code></pre>
 </li>
 </ol>
 </div>
@@ -76,7 +76,7 @@
 
 <p>Git will help you keep this local copy updated. If I&#8217;ve made some changes and pushed them up to github, you just need to run</p>
 
-<pre><code>git pull</code></pre>
+<pre><code>$ git pull</code></pre>
 
 <p>to pull them down onto your laptop.</p>
 <div class='exercise alert alert-info'><strong>
@@ -94,7 +94,7 @@
 <li>
 <p>Pull down the changes and make sure you can see them in your browser:</p>
 
-<pre><code>git pull</code></pre>
+<pre><code>$ git pull</code></pre>
 </li>
 </ol>
 </div>
@@ -112,8 +112,8 @@
 <li>
 <p>Open <code>toms_site/index.html</code> in your code editor, and change the page heading (inside <code>&lt;h1&gt;</code>) to something of your choosing. (At the same time I&#8217;ll also make a change). When you&#8217;re done, commit your change to the local repository:</p>
 
-<pre><code> git add .
- git commit -m &quot;Changed heading&quot;</code></pre>
+<pre><code> $ git add --all
+ $ git commit -m &quot;Changed heading&quot;</code></pre>
 </li>
 
 <li>
@@ -123,7 +123,7 @@
 <li>
 <p>Pull down my changes</p>
 
-<pre><code> git pull</code></pre>
+<pre><code> $ git pull</code></pre>
 </li>
 </ol>
 </div>
@@ -137,8 +137,8 @@
 
 <p>To fix the merge conflict you need to edit this by hand, picking the version you want and then do:</p>
 
-<pre><code>git add .
-git commit -m &quot;Fixed conflicts&quot;</code></pre>
+<pre><code>$ git add --all
+$ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
@@ -154,8 +154,8 @@ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 <li>
 <p>On the command line:</p>
 
-<pre><code> git add .
- git commit -m &quot;Fixed conflicts&quot;</code></pre>
+<pre><code> $ git add --all
+ $ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 </li>
 </ol>
 </div>
@@ -184,10 +184,10 @@ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 <li>
 <p>Person A should then set it up as a git repository</p>
 
-<pre><code>cd group_project
-git init
-git add .
-git commit -m &quot;Initial import&quot;</code></pre>
+<pre><code>$ cd group_project
+$ git init
+$ git add --all
+$ git commit -m &quot;Initial import&quot;</code></pre>
 </li>
 
 <li>
