Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/html3/index.html
+++ b/html3/index.html
@@ -173,6 +173,10 @@
 <li>
 <p>Refresh the page in Chrome. Notice how the fonts have changed.</p>
 </li>
+
+<li>
+<p>Check your answer against <code>step1.png</code>.</p>
+</li>
 </ol>
 </div>
 	</div>
@@ -220,6 +224,8 @@
 <li>Add a <code>&lt; div class=&quot;container&quot; &gt;</code> around the page content.</li>
 
 <li>Set the page up as two columns (ratio 1:2), with the <code>profile_details</code> div on the left and everything else on the right.</li>
+
+<li>Check your solution matches <code>step2.png</code>.</li>
 </ol>
 </div>
 	</div>
@@ -230,11 +236,17 @@
 
 		<h2>More Bootstrap</h2>
 		<h3 id='text_and_tables'>Text and Tables</h3>
+
+<p>Have a look at the <a href='http://twitter.github.io/bootstrap/base-css.html#tables'>tables section</a> of the Bootstrap docs (Base CSS &gt; Tables).</p>
+
+<p>Also have a look at the <a href='http://twitter.github.io/bootstrap/components.html#typography'>typography section</a> (Components &gt; Typography).</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
 <ol>
 <li>Surround the <code>h1</code> line in a <code>&lt; div class=&#39;page-header&#39; &gt;</code>.</li>
+
+<li>Add a subtext as in the Bootstrap docs.</li>
 
 <li>Change add the class <code>table</code> to the table. You could also experiment with <code>table-bordered</code> and/or <code>table-striped</code>.</li>
 
@@ -242,6 +254,8 @@
 </ol>
 </div>
 <h3 id='badges_and_buttons'>Badges and Buttons</h3>
+
+<p>Check out the <a href='http://twitter.github.io/bootstrap/base-css.html#buttons'>buttons section</a> (Base CSS &gt; Buttons). Also look at <a href='http://twitter.github.io/bootstrap/components.html#labels-badges'>labels and badges section</a> (Components &gt; Labels and Badges).</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
@@ -250,6 +264,8 @@
 <p>Add the class <code>btn</code> to all the edit links on the page:</p>
 
 <pre><code> &lt;a class=&#39;btn&#39; &gt;Edit &lt;\a&gt;</code></pre>
+
+<p>You might also need <code>btn-small</code> in the Recent Activity section.</p>
 </li>
 
 <li>
@@ -259,14 +275,22 @@
 <li>
 <p>Change the items in the <code>awards</code> section to badges of different colours.</p>
 </li>
+
+<li>
+<p>Check your work against <code>step3.png</code>.</p>
+</li>
 </ol>
 </div>
 <h3 id='media_lists'>Media Lists</h3>
+
+<p>Have a look at the <a href='http://twitter.github.io/bootstrap/components.html#media'>media object section</a> of the Bootstrap docs (Components &gt; Media object).</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
 <ol>
 <li>Convert the &#8216;Recent Activity&#8217; list into a media list. You can use the included <code>dave.jpg</code> for the picture.</li>
+
+<li>Check your result against <code>step4.png</code>.</li>
 </ol>
 </div>
 	</div>
@@ -307,6 +331,8 @@
 </ol>
 </div>
 <h3 id='navbar'>Navbar</h3>
+
+<p>Read through the <a href='http://twitter.github.io/bootstrap/components.html#navbar'>navbar section</a> of the Bootstrap docs.</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
@@ -325,6 +351,10 @@
 
 <li>
 <p>Add a search box to the navbar. Use the <code>pull-right</code> class to put it on the right hand side.</p>
+</li>
+
+<li>
+<p>Check your result against <code>step5.png</code>.</p>
 </li>
 </ol>
 </div>
