Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/html2/index.html
+++ b/html2/index.html
@@ -265,8 +265,8 @@ $ git push -u origin master</code></pre>
 
 <p>To do this we need to set some configuration options for the repository:</p>
 
-<pre><code>$ git config remote.origin.push +ref/heads/master:refs/heads/master --add
-$ git config remote.origin.push +ref/heads/master:refs/heads/gh-pages --add</code></pre>
+<pre><code>$ git config remote.origin.push +refs/heads/master:refs/heads/master --add
+$ git config remote.origin.push +refs/heads/master:refs/heads/gh-pages --add</code></pre>
 
 <p>You will then need to</p>
 
