Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/html3/index.html
+++ b/html3/index.html
@@ -102,23 +102,23 @@
 </li>
 
 <li>
-<p>Open <code>example1.html</code> in Sublime Text and Chrome.</p>
+<p>Open <code>exercise1.html</code> in Sublime Text and Chrome.</p>
 </li>
 
 <li>
-<p>Link in the external stylesheet <code>example1.css</code>. Save, add and commit. Make sure the results show up in Chrome when you refresh.</p>
+<p>Link in the external stylesheet <code>exercise1.css</code>. Save, add and commit. Make sure the results show up in Chrome when you refresh.</p>
 </li>
 
 <li>
-<p>Open <code>example2.html</code> in Sublime Text and Chrome.</p>
+<p>Open <code>exercise2.html</code> in Sublime Text and Chrome.</p>
 </li>
 
 <li>
-<p>Move the css from the <code>head</code> into a separate stylesheet, which you should call <code>example2.css</code>. Link to this stylesheet in the head.</p>
+<p>Move the css from the <code>head</code> into a separate stylesheet, which you should call <code>exercise2.css</code>. Link to this stylesheet in the head.</p>
 </li>
 
 <li>
-<p>Create another stylesheet called <code>example2-custom.css</code>.</p>
+<p>Create another stylesheet called <code>exercise2-custom.css</code>.</p>
 </li>
 
 <li>
