--- a/ruby6/index.html
+++ b/ruby6/index.html
@@ -43,6 +43,10 @@
 		<li><a href="#2_a_different_approach" data-toggle="tab">A different approach </a></li>
 		
 	
+		
+		<li><a href="#3_getting_and_setting" data-toggle="tab">Getting and setting </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
@@ -106,6 +110,16 @@
 <li>Check your answers by running <code>test_library_class.rb</code>.</li>
 </ol>
 </div>
+	</div>
+
+	
+	<div class="tab-pane " id="3_getting_and_setting">
+	
+
+		<h2>Getting and setting</h2>
+		<p>So far we&#8217;ve looked at a class where the data didn&#8217;t change.</p>
+
+<p>Let&#8217;s look at a different example: <code>ruby6/character.rb</code></p>
 	</div>
 
 </div>
