--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,16 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_4__1172013'>Session 4 - 11/7/2013</h3>
+
+<ul>
+<li><a href='/ruby2'>Ruby 2</a></li>
+
+<li><a href='/html4'>Web Fundamentals 4</a></li>
+
+<li><a href='/hmwk4'>Homework 4</a></li>
+</ul>
+
 <h3 id='session_3__972013'>Session 3 - 9/7/2013</h3>
 
 <ul>
