--- a/plan.html
+++ b/plan.html
@@ -83,7 +83,16 @@
 </tr><tr><td style='text-align: left;'>-</td><td style='text-align: left;'>-</td><td style='text-align: left;'>hwk 9.1</td><td style='text-align: left;'>-</td>
 </tr><tr><td style='text-align: left;'>-</td><td style='text-align: left;'>-</td><td style='text-align: left;'>9.2.1</td><td style='text-align: left;'><strong>jsapp5</strong>:</td>
 </tr><tr><td style='text-align: left;'>-</td><td style='text-align: left;'>-</td><td style='text-align: left;'>9.2.2</td><td style='text-align: left;'><strong>jsapp6</strong>:</td>
-</tr></tbody></table></div>
+</tr></tbody></table></div><table><thead><tr><th>Week</th><th>Content</th></tr></thead><tbody><tr><td style='text-align: left;'>1</td><td style='text-align: left;'>HTML, CSS, git add, git commit, buy domain name, gh pages</td>
+</tr><tr><td style='text-align: left;'>2</td><td style='text-align: left;'>twitter bootstrap, git push/pull/conflict (cheatsheet), ruby intro, ruby methods</td>
+</tr><tr><td style='text-align: left;'>3</td><td style='text-align: left;'>ruby arrays/hashes, start joint project, forms</td>
+</tr><tr><td style='text-align: left;'>4</td><td style='text-align: left;'>git branching, analytics, ruby up to classes</td>
+</tr><tr><td style='text-align: left;'>5</td><td style='text-align: left;'>databases, rubygems, bootstrap js, js in console</td>
+</tr><tr><td style='text-align: left;'>6</td><td style='text-align: left;'>sinatra, own js, mobile app</td>
+</tr><tr><td style='text-align: left;'>7</td><td style='text-align: left;'>rails</td>
+</tr><tr><td style='text-align: left;'>8</td><td style='text-align: left;'>own project + more rails</td>
+</tr><tr><td style='text-align: left;'>9</td>
+</tr></tbody></table>
 
 
   </div> <!-- /container -->
