Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/html2/index.html
+++ b/html2/index.html
@@ -278,7 +278,8 @@ $ git config remote.origin.push +refs/heads/master:refs/heads/gh-pages --add</co
 <li>
 <p>Add that change:</p>
 
-<pre><code> $ git commit -a -m &quot;Small change&quot;</code></pre>
+<pre><code> $ git commit --all
+ $ git commit -m &quot;Small change&quot;</code></pre>
 </li>
 
 <li>
