Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/html4/index.html
+++ b/html4/index.html
@@ -224,7 +224,7 @@ $ git commit -m &quot;Fixed conflicts&quot;</code></pre>
 <li>
 <p>Person A should then set it up as a git repository</p>
 
-<pre><code>$ cd group_notes
+<pre><code>$ cd group_cheatsheet
 $ git init
 $ git add --all
 $ git commit -m &quot;Initial import&quot;</code></pre>
