Updating to 9aaeb5f32740989d63cd6b077c7f4c7bc9eed05b.

--- a/hmwk4/index.html
+++ b/hmwk4/index.html
@@ -59,7 +59,13 @@
 		<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>Finish off <code>bouncer.rb</code> and any other unfinished exercises from <code>ruby2</code>.</p>
+<ol>
+<li>Finish off <code>pass_fail.rb</code>. Make sure the tests pass.</li>
+
+<li>(Optional) try <code>pass_fail2</code>. Make sure the tests (<code>test_pass_fail2.rb</code>) pass.</li>
+
+<li>Read through the &#8216;More conditionals&#8217; tab and have a go at <code>grade.rb</code>.</li>
+</ol>
 </div><hr /><div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
